# UAVCalibration

./: .gitignore  .gitmodules  README.md  data.py  main.py  pyproject.toml
scripts/: api_usage.ipynb  demo.ipynb  demo.py  map_test.ipynb  matching.ipynb  pipeline_test.ipynb  test.ipynb
src/uavcalibration/: __init__.py  calibrate.py  calibrate_pipeline.py  calibration.py  graph.py  match.py  pipeline.py  pipline.py  rectification.py  transform.py  types.py
src/uavcalibration/datasets/: __init__.py  dataset.py  visloc.py
src/uavcalibration/map/: __init__.py  geotiff_map.py  map.py  tile_map.py  tiled_map.py
src/uavcalibration/match/: __init__.py  lightglue.py  match.py  ransac.py  sift.py
src/uavcalibration/matching/: __init__.py  lightglue.py  matching.py  ransac.py  sift.py
