[project]
name = "uavcalibration"
version = "0.1.0"
description = "Vision-Based UAV Image Calibration"
authors = [{ name = "Shenyao Chen" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "aiohttp>=3.12.15",
  "cachetools>=6.1.0",
  "lightglue @ git+https://github.com/cvg/LightGlue.git",
  "opencv-python>=4.11.0.86",
  "pillow>=11.3.0",
  "pyproj>=3.7.1",
  "rasterio>=1.4.3",
  "torch>=2.4.0",
]

[dependency-groups]
dev = ["ipykernel>=6.30.1"]
